# pocl-hls

./: CMakeLists.txt  README.md  config.h.in.cmake
cmake/: LLVM.cmake
examples/accel/: CMakeLists.txt
examples/example1/: CMakeLists.txt
examples/polybenchGPU/: CMakeLists.txt
include/: pocl.h  pocl_cache.h
lib/CL/: CMakeLists.txt  clEnqueueCommandBufferKHR.c  clUpdateMutableCommandsKHR.c  pocl_cache.c  pocl_cl.h  pocl_file_util.h  pocl_mlir.h  pocl_mlir_build.cc  pocl_mlir_cmd_buffer.cc  pocl_mlir_metadata.cc  pocl_mlir_passes.hh  pocl_mlir_utils.cc  pocl_mlir_wg.cc  pocl_ndrange_kernel.c
lib/CL/devices/: bufalloc.c
lib/CL/devices/almaif/: AlmaIFDevice.cc  AlmaIFDevice.hh  AlmaIFRegion.cc  AlmaIFRegion.hh  AlmaifCompile.cc  AlmaifCompile.hh  AlmaifShared.hh  CMakeLists.txt  EmulationDevice.cc  EmulationDevice.hh  MMAPRegion.hh  XilinxXrtDevice.cc  XilinxXrtDevice.hh  XilinxXrtExternalRegion.cc  XilinxXrtExternalRegion.hh  XilinxXrtRegion.cc  XilinxXrtRegion.hh  almaif.cc
lib/CL/devices/almaif/AlmaifDB/: AlmaIFBitstreamDatabaseManager.cc  AlmaIFBitstreamDatabaseManager.hh  DBDevice.cc  DBDevice.hh
lib/CL/devices/almaif/altera/: AlteraOpaeDevice.cc  AlteraOpaeDevice.hh  AlteraOpaeExternalRegion.cc  AlteraOpaeExternalRegion.hh  AlteraOpaeRegion.cc  AlteraOpaeRegion.hh
lib/CL/devices/almaif/mlir/: AlmaifCompileMLIR.cc  AlmaifCompileMLIR.hh  firmware.c  generate_hls_core.tcl  generate_xo.tcl  xrt.ini
lib/CL/devices/almaif/openasip/: AlmaifCompileOpenasip.cc  almaif-tce-device-defs.h  tta_device_main.c
lib/kernel/mlir/: CMakeLists.txt  barrier.mlir
lib/mliropencl/include/pocl/Dialect/: PoclOps.hh  PoclOps.td  PolygeistOps.h
lib/mliropencl/include/pocl/Transforms/: Passes.hh  Passes.td
lib/mliropencl/include/pocl/Utils/: AffineUtils.h  BarrierUtils.h  Utils.h
lib/mliropencl/lib/Dialect/: CMakeLists.txt  PolygeistOps.cpp
lib/mliropencl/lib/Transforms/: AffineCFG.cpp  CMakeLists.txt  ConvertMemrefToLLVMKernelArgs.cpp  DetectReduction.cpp  DistributeBarriers.cpp  Linker.cpp  Mem2Reg.cpp  SimplifyAffineExprs.cpp  Workgroup.cpp
tests/kernel/: CMakeLists.txt
tests/mlir/pocl-mlir-opt/: mem2reg_allocas_test.mlir  wg_test.mlir
tests/mlir/pocl-mlir-opt/affine/: affinecfg.mlir  affraise.mlir  affraise2.mlir  affraise3.mlir
tests/mlir/pocl-mlir-opt/barrier/: barrierelim.mlir  cpuifyifsplit.mlir  cpuifyloopdistribute.mlir  paralleldistribute.mlir  paralleldistributefor.mlir
tests/regression/: CMakeLists.txt
tests/runtime/: CMakeLists.txt
tests/workgroup/: CMakeLists.txt
tools/scripts/: setup_emu.sh  setup_hw.sh  setup_hw_emu.sh
